[package]
name = "meowth"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.1.1", features = ["from"] }
dioxus-devtools = "0.7.3"
either = "1.15.0"
humantime = "2.3.0"
iced = { git = "https://github.com/iced-rs/iced", features = ["smol", "advanced", "canvas", "image", "markdown", "svg", "debug", "time-travel", "lazy", "highlighter", "hot", "iced_highlighter", "advanced-shaping", "selector"] }
native-dialog = "0.9.6"
recur-fn = "2.2.0"
regex = "1.12.3"
ron = "0.12.0"
rust_dmx = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
smol = "2.0.2"
subsecond = "0.7.3"
tap = "1.0.1"
uuid = { version = "1.20.0", features = ["serde", "v4"] }
