[package]
name = "meowth"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus-devtools = "0.7.6"
eframe = "0.34.1"
egui = "0.34.1"
egui_flex = "0.6.0"
egui_ltreeview = "0.7.0"
egui_tiles = { version = "0.15.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
subsecond = "0.7.6"
undo = { version = "0.52.0", features = ["serde"] }
